--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -1,10 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-    did it work?
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Tic Tac Tron</title>
+        <link rel="stylesheet" href="TicTacTron.css">
+
+    </head>
+    <body>
+        <div class="background">
+            <div class="board">
+                <div class="box" id="0"></div>
+                <div class="box" id="1"></div>
+                <div class="box" id="2"></div>
+                <div class="box" id="3"></div>
+                <div class="box" id="4"></div>
+                <div class="box" id="5"></div>
+                <div class="box" id="6"></div>
+                <div class="box" id="7"></div>
+                <div class="box" id="8"></div>
+            </div>
+        </div>
+    </body>
+    <footer>
+        <script src="TicTacTron.js"></script>
+    </footer>
 </html>
