--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -9,15 +9,15 @@
     <body>
         <div class="background">
             <div class="board">
-                <div class="box" id="0"></div>
-                <div class="box" id="1"></div>
-                <div class="box" id="2"></div>
-                <div class="box" id="3"></div>
-                <div class="box" id="4"></div>
-                <div class="box" id="5"></div>
-                <div class="box" id="6"></div>
-                <div class="box" id="7"></div>
-                <div class="box" id="8"></div>
+                <div class="box" id="0" value="?"></div>
+                <div class="box" id="1" value="?"></div>
+                <div class="box" id="2" value="?"></div>
+                <div class="box" id="3" value="?"></div>
+                <div class="box" id="4" value="?"></div>
+                <div class="box" id="5" value="?"></div>
+                <div class="box" id="6" value="?"></div>
+                <div class="box" id="7" value="?"></div>
+                <div class="box" id="8" value="?"></div>
             </div>
         </div>
     </body>
