--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -1,27 +1,24 @@
 ﻿<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Tic Tac Tron</title>
-        <link rel="stylesheet" href="TicTacTron.css">
-
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <title>Tic Tac Tron</title>
+    <link rel="stylesheet" href="TicTacTron.css">
+    <script src="TicTacTron.js"></script>
+</head>
     <body>
         <div class="background">
             <div class="board">
-                <div class="box" id="0" value="?"></div>
-                <div class="box" id="1" value="?"></div>
-                <div class="box" id="2" value="?"></div>
-                <div class="box" id="3" value="?"></div>
-                <div class="box" id="4" value="?"></div>
-                <div class="box" id="5" value="?"></div>
-                <div class="box" id="6" value="?"></div>
-                <div class="box" id="7" value="?"></div>
-                <div class="box" id="8" value="?"></div>
+                <div class="box" id="0" data-value="?"></div>
+                <div class="box" id="1" data-value="?"></div>
+                <div class="box" id="2" data-value="?"></div>
+                <div class="box" id="3" data-value="?"></div>
+                <div class="box" id="4" data-value="?"></div>
+                <div class="box" id="5" data-value="?"></div>
+                <div class="box" id="6" data-value="?"></div>
+                <div class="box" id="7" data-value="?"></div>
+                <div class="box" id="8" data-value="?"></div>
             </div>
         </div>
     </body>
-    <footer>
-        <script src="TicTacTron.js"></script>
-    </footer>
 </html>
