Started title page

--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -8,6 +8,9 @@
 </head>
     <body>
         <div class="background">
+            <div class="start">
+                <img id="start-logo" src="Tic-Tac-Tron.jpg" />
+            </div>
             <div class="board">
                 <div class="box" id="0" data-value="?"></div>
                 <div class="box" id="1" data-value="?"></div>
