Added animation for symbol select

--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -9,7 +9,12 @@
     <body>
         <div class="background">
             <div class="start">
-                <img id="start-logo" src="Tic-Tac-Tron.jpg" />
+                <img id="start-logo" src="Tic-Tac-Tron.png" />
+                <p>Choose a symbol and battle for the glory of the users!</p>
+                <div id="symbol-container">
+                    <div class="select-box" id="select-box-X">X</div>
+                    <div class="select-box" id="select-box-O">O</div>
+                </div>
             </div>
             <div class="board">
                 <div class="box" id="0" data-value="?"></div>
