Finished start menu

--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -8,15 +8,15 @@
 </head>
     <body>
         <div class="background">
-            <div class="start">
+            <div id="start">
                 <img id="start-logo" src="Tic-Tac-Tron.png" />
                 <p>Choose a symbol and battle for the glory of the users!</p>
                 <div id="symbol-container">
-                    <div class="select-box" id="select-box-X">X</div>
-                    <div class="select-box" id="select-box-O">O</div>
+                    <div class="select-box" id="select-box-X" data-value="X">X</div>
+                    <div class="select-box" id="select-box-O" data-value="O">O</div>
                 </div>
             </div>
-            <div class="board">
+            <div id="board">
                 <div class="box" id="0" data-value="?"></div>
                 <div class="box" id="1" data-value="?"></div>
                 <div class="box" id="2" data-value="?"></div>
