Implemented Game over messages

--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -27,6 +27,7 @@
                 <div class="box" id="7" data-value="?"></div>
                 <div class="box" id="8" data-value="?"></div>
             </div>
+            <div id="game-over"></div>
         </div>
     </body>
 </html>
