Created MediaFiles folder

--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -9,7 +9,7 @@
     <body>
         <div class="background">
             <div id="start">
-                <img id="start-logo" src="Tic-Tac-Tron.png" />
+                <img id="start-logo" src="\MediaFiles\Tic-Tac-Tron.png" />
                 <p>Choose a symbol and battle for the glory of the users!</p>
                 <div id="symbol-container">
                     <div class="select-box" id="select-box-X" data-value="X">X</div>
