Audio and animation updates

--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>Tic Tac Tron</title>
-    <link rel="stylesheet" href="TicTacTron.css">
-    <script src="TicTacTron.js"></script>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <title>Tic Tac Tron</title>
+        <link rel="stylesheet" href="TicTacTron.css">
+        <script src="TicTacTron.js"></script>
+    </head>
     <body>
         <div class="background">
             <div id="start">
@@ -29,5 +29,8 @@
             </div>
             <div id="game-over"></div>
         </div>
+        <audio id="gamestart-audio" src="/MediaFiles/lightcycle.mp3"></audio>
+        <audio id="playermove-audio" src="/MediaFiles/heat-vision.mp3"></audio>
+        <audio id="azuremove-audio" src="/MediaFiles/sf_laser_14.mp3"></audio>
     </body>
 </html>
