Added background music

--- a/TicTacToe/wwwroot/default.html
+++ b/TicTacToe/wwwroot/default.html
@@ -29,6 +29,7 @@
             </div>
             <div id="game-over"></div>
         </div>
+        <audio id="music" src="/MediaFiles/End-of-Line.m4a"></audio>
         <audio id="gamestart-audio" src="/MediaFiles/lightcycle.mp3"></audio>
         <audio id="playermove-audio" src="/MediaFiles/heat-vision.mp3"></audio>
         <audio id="azuremove-audio" src="/MediaFiles/sf_laser_14.mp3"></audio>
